feat: added header

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,30 @@
-<p>header works!</p>
+<div class="header">
+    <div class="header__contacts">
+        <div class="header__contacts_logo">
+            <img src="../../../../assets/icons/logo.svg" alt="Logo Azur" />
+            <span>Azur Life</span>
+        </div>
+        <img src="../../../../assets/icons/header_divider.svg" alt="Divider" />
+        <div class="header__contacts_address">
+            <img
+                src="../../../../assets/icons/pointer.svg"
+                alt="Pointer Azur"
+            />
+            <span>Франция, бульвар Леклерк, 46, 06310, Болье-сюр-Мер </span>
+        </div>
+        <img src="../../../../assets/icons/header_divider.svg" alt="Divider" />
+        <div class="header__contacts_phone">
+            <img src="../../../../assets/icons/phone.svg" alt="Phone Azur" />
+            <span>+33 4 93 16 06 31 </span>
+        </div>
+    </div>
+    <div class="header__menu">
+        <nav class="header__menu_nav">
+            <a href="">en</a>
+            <a href="">fr</a>
+            <a href="">ru</a>
+            <a href="">it</a>
+        </nav>
+        <img src="../../../../assets/icons/menu_open.svg" alt="Burger menu" />
+    </div>
+</div>
