--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -1,5 +1,3 @@
-<div class="container">
-    <header>header</header>
-    <router-outlet></router-outlet>
-    <footer>footer</footer>
-</div>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<footer>footer</footer>
