--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,49 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Manrope&display=swap");
+
+:root {
+    --primary: #ffffff;
+    --primary-half: rgba(255, 255, 255, 0.5);
+    --accent: #BE7E00;
+    --background: #101010;
+    --background-second: #151515;
+    --background-button: #fff9ec;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
+    color: var(--primary);
+}
+
+html,
+body {
+    height: 100%;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+    background-color: var(--background);
+    font-family: "Manrope", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+}
+
+ul {
+    list-style-type: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Playfair Display";
+    font-style: normal;
+    font-weight: 400;
+}
+
+.container {
+    padding: 0 7.5rem;
+}
