--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -10,7 +10,7 @@
                 src="../../../../assets/icons/pointer.svg"
                 alt="Pointer Azur"
             />
-            <span>Франция, бульвар Леклерк, 46, 06310, Болье-сюр-Мер </span>
+            <span>Франция, бульвар Леклерк, 46, 06310, Болье-сюр-Мер</span>
         </div>
         <img src="../../../../assets/icons/header_divider.svg" alt="Divider" />
         <div class="header__contacts_phone">
@@ -25,6 +25,11 @@
             <a href="">ru</a>
             <a href="">it</a>
         </nav>
-        <img src="../../../../assets/icons/menu_open.svg" alt="Burger menu" />
+        <img
+            src="../../../../assets/icons/menu_open.svg"
+            alt="Burger menu open"
+            (click)="onOpenMenu()"
+            class="burger__open"
+        />
     </div>
 </div>
