--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,5 +1,5 @@
 .header {
-    position: absolute;
+    position: fixed;
     top: 45px;
     left: 0;
     display: flex;
@@ -51,3 +51,14 @@
         }
     }
 }
+
+.burger__open {
+    cursor: pointer;
+    
+    svg:hover path  {
+        
+            stroke: red;
+        
+    }
+}
+
