--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -1,3 +1,4 @@
-<app-header></app-header>
+<app-header (openMenu)="toggleMenu()"></app-header>
+<app-menu [isOpen]="isOpen" (closeMenu)="toggleMenu()"></app-menu>
 <router-outlet></router-outlet>
 <footer>footer</footer>
