--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,10 +4,13 @@
 :root {
     --primary: #ffffff;
     --primary-half: rgba(255, 255, 255, 0.5);
-    --accent: #BE7E00;
+    --secondary-half: rgba(0, 0, 0, 0.5);
+    --accent: #be7e00;
+    --menu-text: #656565;
     --background: #101010;
     --background-second: #151515;
     --background-button: #fff9ec;
+    --background-menu: #1a1a1a;
 }
 
 * {
@@ -20,7 +23,7 @@
 
 html,
 body {
-    height: 100%;
+    
     scroll-behavior: smooth;
     overflow-x: hidden;
     background-color: var(--background);
@@ -28,6 +31,11 @@ body {
     font-style: normal;
     font-weight: 400;
 }
+
+body {
+    height: 100%;
+}
+
 
 ul {
     list-style-type: none;
