--- a/src/app/shared/components/menu/menu.component.scss
+++ b/src/app/shared/components/menu/menu.component.scss
@@ -1,23 +1,23 @@
 .menu {
-    position: absolute;
-    right: -100%;
-    top: 0;
+    position: fixed;
+    right: 0;
     width: 100%;
-    height: max-content;
+    height: 100vh;
     background-color: var(--secondary-half);
-    transition: all 0.3s ease;
-    z-index: 200;
-    height: 1050px;
+    transform: translateX(100%);
+    transition: transform 0.3s ease;
+    z-index: 200;    
     & * {
         color: var(--menu-text);
         font-size: 20px;
     }
     &__active {
-        right: 0;
+        transform: translateX(0);
     }
     &__wrapper {
-        position: absolute;
+        position: fixed;
         width: 525px;
+        height: inherit;
         top: 0;
         right: 0;
         background-color: var(--background-menu);
@@ -148,7 +148,6 @@
             width: 100%;
             height: 1px;
             background-color: rgb(255, 255, 255);
-            
         }
     }
 }
