--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -19,12 +19,12 @@
         </div>
     </div>
     <div class="header__menu">
-        <nav class="header__menu_nav">
+        <div class="header__menu_nav">
             <a href="">en</a>
             <a href="">fr</a>
             <a href="">ru</a>
             <a href="">it</a>
-        </nav>
+        </div>
         <img
             src="../../../../assets/icons/menu_open.svg"
             alt="Burger menu open"
