--- a/src/app/pages/1-home/home.component.html
+++ b/src/app/pages/1-home/home.component.html
@@ -1,3 +1,5 @@
 <section>
     <app-home-first></app-home-first>
+    <app-home-second-screen></app-home-second-screen>
+    <app-home-third-screen></app-home-third-screen>
 </section>
