--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,8 @@
     --footer-region: #bcbcbc;
     --secondary-half: rgba(0, 0, 0, 0.5);
     --accent: #be7e00;
+    --button: rgba(255, 255, 255, 0.07);    
+    --button-hover: rgba(255, 255, 255, 0.1);    
     --menu-text: #656565;
     --background: #101010;
     --background-second: #151515;
