feat: added slider for third screen

--- a/src/app/pages/1-home/components/1-home-first-screen/home-first.component.scss
+++ b/src/app/pages/1-home/components/1-home-first-screen/home-first.component.scss
@@ -7,7 +7,7 @@
     position: relative;
     width: 100%;
     min-height: 100vh;
-    background-image: url("../../../../../assets/images/home/home_bg.jpg");
+    background-image: url("/assets/images/home/home_bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
