--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -76,25 +76,25 @@
         <div class="footer__contacts_wrapper">
             <div class="footer__contacts_wrapper-phone">
                 <img
-                    src="../../../../assets/icons/phone.svg"
+                    src="/assets/icons/phone.svg"
                     alt="Contact phone number"
                 />
                 <span>+33 4 93 16 06 31 </span>
             </div>
             <div class="footer__contacts_wrapper-links">
-                <img src="../../../../assets/icons/inst.svg" alt="Inst link" />
-                <img src="../../../../assets/icons/face.svg" alt="Face link" />
+                <img src="/assets/icons/inst.svg" alt="Inst link" />
+                <img src="/assets/icons/face.svg" alt="Face link" />
             </div>
         </div>
 
         <div class="footer__contacts_email">
-            <img src="../../../../assets/icons/email.svg" alt="Contact email" />
+            <img src="/assets/icons/email.svg" alt="Contact email" />
             <span>contact&#64;azur-life.com</span>
         </div>
 
         <div class="footer__contacts_address">
             <img
-                src="../../../../assets/icons/pointer.svg"
+                src="/assets/icons/pointer.svg"
                 alt="Contact address"
             />
             <span>Франция, бульвар Леклерк, 46, 06310, Болье-сюр-Мер</span>
