--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,20 +1,20 @@
 <div class="header">
     <div class="header__contacts">
         <div class="header__contacts_logo">
-            <img src="../../../../assets/icons/logo.svg" alt="Logo Azur" />
+            <img src="/assets/icons/logo.svg" alt="Logo Azur" />
             <span>Azur Life</span>
         </div>
-        <img src="../../../../assets/icons/header_divider.svg" alt="Divider" />
+        <img src="/assets/icons/header_divider.svg" alt="Divider" />
         <div class="header__contacts_address">
             <img
-                src="../../../../assets/icons/pointer.svg"
+                src="/assets/icons/pointer.svg"
                 alt="Pointer Azur"
             />
             <span>Франция, бульвар Леклерк, 46, 06310, Болье-сюр-Мер</span>
         </div>
-        <img src="../../../../assets/icons/header_divider.svg" alt="Divider" />
+        <img src="/assets/icons/header_divider.svg" alt="Divider" />
         <div class="header__contacts_phone">
-            <img src="../../../../assets/icons/phone.svg" alt="Phone Azur" />
+            <img src="/assets/icons/phone.svg" alt="Phone Azur" />
             <span>+33 4 93 16 06 31 </span>
         </div>
     </div>
@@ -26,7 +26,7 @@
             <a href="">it</a>
         </div>
         <img
-            src="../../../../assets/icons/menu_open.svg"
+            src="/assets/icons/menu_open.svg"
             alt="Burger menu open"
             (click)="onOpenMenu()"
             class="burger__open"
