--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -8,7 +8,7 @@
                 <a href="">it</a>
             </div>
             <img
-                src="../../../../assets/icons/menu_close.svg"
+                src="/assets/icons/menu_close.svg"
                 alt="Burger menu close"
                 (click)="onCloseMenu()"
                 class="burger__close"
