--- a/src/app/pages/1-home/home.component.html
+++ b/src/app/pages/1-home/home.component.html
@@ -2,4 +2,5 @@
     <app-home-first></app-home-first>
     <app-home-second-screen></app-home-second-screen>
     <app-home-third-screen></app-home-third-screen>
+    <app-home-fourth-screen></app-home-fourth-screen>
 </section>
