feat: added fifth screen

--- a/src/app/pages/1-home/home.component.html
+++ b/src/app/pages/1-home/home.component.html
@@ -3,4 +3,5 @@
     <app-home-second-screen></app-home-second-screen>
     <app-home-third-screen></app-home-third-screen>
     <app-home-fourth-screen></app-home-fourth-screen>
+    <app-home-fifth-screen></app-home-fifth-screen>
 </section>
