--- a/src/app/pages/1-home/components/4-home-fourth-screen/home-fourth-screen.component.scss
+++ b/src/app/pages/1-home/components/4-home-fourth-screen/home-fourth-screen.component.scss
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    
 }
 
 .home {
@@ -14,6 +15,7 @@
         background-image: url("/assets/images/home/fourth.png");
         background-repeat: no-repeat;
         background-position: left;
+        background-color: var(--background-second);
         &__wrapper {
             width: 100vw;
             min-height: 100vh;
