--- a/src/app/pages/1-home/home.component.html
+++ b/src/app/pages/1-home/home.component.html
@@ -4,4 +4,5 @@
     <app-home-third-screen></app-home-third-screen>
     <app-home-fourth-screen></app-home-fourth-screen>
     <app-home-fifth-screen></app-home-fifth-screen>
+    <app-home-sixth-screen></app-home-sixth-screen>
 </section>
