--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 :root {
     --primary: #ffffff;
     --primary-half: rgba(255, 255, 255, 0.5);
+    --primary-semihalf: rgba(255, 255, 255, 0.7);    
     --footer-region: #bcbcbc;
     --secondary-half: rgba(0, 0, 0, 0.5);
     --accent: #be7e00;
