feat: added seventh block

--- a/src/app/pages/1-home/home.component.html
+++ b/src/app/pages/1-home/home.component.html
@@ -1,8 +1,9 @@
 <section>
-    <app-home-first></app-home-first>
+    <app-home-first-screen></app-home-first-screen>
     <app-home-second-screen></app-home-second-screen>
     <app-home-third-screen></app-home-third-screen>
     <app-home-fourth-screen></app-home-fourth-screen>
     <app-home-fifth-screen></app-home-fifth-screen>
     <app-home-sixth-screen></app-home-sixth-screen>
+    <app-home-seventh-screen></app-home-seventh-screen>
 </section>
