--- a/src/app/shared/components/swiper/swiper.component.scss
+++ b/src/app/shared/components/swiper/swiper.component.scss
@@ -7,7 +7,7 @@
             align-items: center;
             justify-content: center;
             padding-top: 60px;
-            
+
             &__wrapper {
                 position: relative;
                 width: max-content;
@@ -18,8 +18,44 @@
                     position: absolute;
                     top: -3%;
                     right: 5%;
+                    z-index: 1000;
                 }
-
+                &_gradient {
+                    width: 100%;
+                    height: 120px;
+                    background: linear-gradient(
+                        0deg,
+                        rgba(0, 0, 0, 0) 0%,
+                        #0000003b 100%
+                    );
+                    position: absolute;
+                    top: 0;
+                }
+                &_link {
+                    position: absolute;
+                    top: 6%;
+                    right: 10%;
+                    text-decoration: none;
+                    z-index: 1000;
+                    &::before {
+                        width: 0;
+                        content: "";
+                        position: absolute;
+                        bottom: -2px;
+                        height: 1px;
+                        transition: all 0.5s;
+                    }
+                    &:hover {
+                        &::before {
+                            content: "";
+                            position: absolute;
+                            bottom: -2px;
+                            width: 100%;
+                            height: 1px;
+                            background-color: rgb(255, 255, 255);
+                        }
+                    }
+                }
                 &_top {
                     position: absolute;
                     top: 6%;
@@ -30,11 +66,22 @@
                     span {
                         font-size: 20px;
                     }
+                    &-button {
+                        padding: 7px 12px;
+                        background-color: var(--primary);
+                        color: var(--accent);
+                        border: none;
+                        border-radius: 8px;
+                        cursor: pointer;
+                    }
                 }
                 &_bottom {
                     position: absolute;
                     bottom: 12%;
                     left: 48px;
+                    &-low {
+                        bottom: 7%;
+                    }
                     &-button {
                         width: 82px;
                         height: 34px;
