--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,12 +4,12 @@
 :root {
     --primary: #ffffff;
     --primary-half: rgba(255, 255, 255, 0.5);
-    --primary-semihalf: rgba(255, 255, 255, 0.7);    
+    --primary-semihalf: rgba(255, 255, 255, 0.7);
     --footer-region: #bcbcbc;
     --secondary-half: rgba(0, 0, 0, 0.5);
     --accent: #be7e00;
-    --button-background: rgba(255, 255, 255, 0.07);    
-    --button-hover: rgba(255, 255, 255, 0.1);    
+    --button-background: rgba(255, 255, 255, 0.07);
+    --button-hover: rgba(255, 255, 255, 0.1);
     --menu-text: #656565;
     --background: #101010;
     --background-second: #151515;
@@ -54,7 +54,12 @@ h6 {
     font-weight: 400;
 }
 
+h2 {
+    font-size: 85px;
+    line-height: 90%;
+    letter-spacing: -1.7px;
+}
+
 .container {
     padding: 0 7.5rem;
 }
-
