feat: added eighth home screen

--- a/src/app/pages/1-home/home.component.html
+++ b/src/app/pages/1-home/home.component.html
@@ -6,4 +6,5 @@
     <app-home-fifth-screen></app-home-fifth-screen>
     <app-home-sixth-screen></app-home-sixth-screen>
     <app-home-seventh-screen></app-home-seventh-screen>
+    <app-home-eighth-screen></app-home-eighth-screen>
 </section>
