--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@
     --background-second: #151515;
     --background-button: #fff9ec;
     --background-menu: #1a1a1a;
+    --danger-color: crimson;
 }
 
 * {
