--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,15 +1,14 @@
 <div class="header">
     <div class="header__contacts">
         <div class="header__contacts_logo">
-            <img src="/assets/icons/logo.svg" alt="Logo Azur" />
+            <a [routerLink]="'/'"
+                ><img src="/assets/icons/logo.svg" alt="Logo Azur"
+            /></a>
             <span>Azur Life</span>
         </div>
         <img src="/assets/icons/header_divider.svg" alt="Divider" />
         <div class="header__contacts_address">
-            <img
-                src="/assets/icons/pointer.svg"
-                alt="Pointer Azur"
-            />
+            <img src="/assets/icons/pointer.svg" alt="Pointer Azur" />
             <span>Франция, бульвар Леклерк, 46, 06310, Болье-сюр-Мер</span>
         </div>
         <img src="/assets/icons/header_divider.svg" alt="Divider" />
