feat: added about first and second screens, updated circle svg component

--- a/src/app/pages/0-home/components/7-home-seventh-screen/home-seventh-screen.component.html
+++ b/src/app/pages/0-home/components/7-home-seventh-screen/home-seventh-screen.component.html
@@ -2,7 +2,9 @@
     <div class="container">
         <div class="home__seventh_blog">
             <h2 class="home__seventh_blog-title">блог</h2>
-            <app-logo-circle></app-logo-circle>
+            <div class="home__seventh_blog-circle">
+                <app-logo-circle></app-logo-circle>
+            </div>
         </div>
 
         <div class="home__seventh_slider">
