--- a/src/app/pages/0-home/components/7-home-seventh-screen/home-seventh-screen.component.scss
+++ b/src/app/pages/0-home/components/7-home-seventh-screen/home-seventh-screen.component.scss
@@ -11,6 +11,12 @@
             position: relative;
             margin-left: 125px;
             width: max-content;
+            &-circle {
+                display: inline-block;
+                position: absolute;
+                top: -1.7rem;
+                right: -4rem;
+            }
         }
         &_slider {
             position: relative;
