--- a/src/app/pages/1-about/about.component.html
+++ b/src/app/pages/1-about/about.component.html
@@ -1,4 +1,4 @@
 <section>
-    <p>about works!</p>
     <app-about-first-screen></app-about-first-screen>
+    <app-about-second-screen></app-about-second-screen>
 </section>
