--- a/src/app/pages/1-about/components/1-about-first-screen/about-first-screen.component.html
+++ b/src/app/pages/1-about/components/1-about-first-screen/about-first-screen.component.html
@@ -1,1 +1,25 @@
-<p>about-first-screen works!</p>
+<div class="about__first">
+    <div class="about__first_wrapper">
+        <div class="container">
+            <app-crumbs
+                [linkTitle]="'Главная страница'"
+                [current]="'О нас'"
+            ></app-crumbs>
+            <h1 class="about__first_title">
+                Сделки <br />
+                на русском языке <br />
+                с Вашей недвижимостью во Франции <br />
+                с 2017 года
+            </h1>
+
+            <p class="about__first_description">
+                Открываем новые горизонты Франции для Вас. Мы подберем
+                недвижимость исходя из озвученных запросов, обеспечим управление
+                вашими апартаментами или окажем услугу консьерж-сервиса, а вам
+                остается только одно: наслаждаться жизнью.
+            </p>
+
+            <button class="about__first_button">Напишите нам</button>
+        </div>
+    </div>
+</div>
