--- a/src/app/shared/components/not-found-page/not-found-page.component.html
+++ b/src/app/shared/components/not-found-page/not-found-page.component.html
@@ -5,7 +5,9 @@
     <div class="container">
         <div class="not__found_wrapper">
             <h1 class="not__found_title">Извините, но страница не найдена</h1>
-            <app-logo-circle [additionalClasses]="'logo__circle__not_found'"></app-logo-circle>
+            <div class="not__found_title-circle">
+                <app-logo-circle></app-logo-circle>
+            </div>
         </div>
         <p class="not__found_subtitle">
             но вы все ещё можете вернуться на
