--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
     --primary: #ffffff;
     --primary-half: rgba(255, 255, 255, 0.5);
     --primary-semihalf: rgba(255, 255, 255, 0.7);
+    --crumbs-title: rgba(255, 255, 255, 0.6);
     --footer-region: #bcbcbc;
     --secondary-half: rgba(0, 0, 0, 0.5);
     --accent: #be7e00;
