feat: added third screen about

--- a/src/app/pages/1-about/about.component.html
+++ b/src/app/pages/1-about/about.component.html
@@ -1,4 +1,5 @@
 <section>
     <app-about-first-screen></app-about-first-screen>
     <app-about-second-screen></app-about-second-screen>
+    <app-about-third-screen></app-about-third-screen>
 </section>
