--- a/src/app/pages/1-about/components/2-about-second-screen/about-second-screen.component.scss
+++ b/src/app/pages/1-about/components/2-about-second-screen/about-second-screen.component.scss
@@ -13,6 +13,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
+    background-color: var(--background-second);
     &_wrapper {
         position: relative;
         display: flex;
